# neural-distortion

./: README.md
Weights/: Weights.h  model_weights.json
forward-pass/: CMakeCache.txt  CMakeLists.txt  Makefile  benchmark  cmake_install.cmake  forward-pass
forward-pass/include/: NeuralDistortion.h  benchmark.h
forward-pass/src/: benchmark.cpp  main.cpp
pythonFiles/: export_to_cpp.py  generate.py  train.py
weights/: model_weights.json
